--- a/index copia.html
+++ b/index copia.html
@@ -3,14 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets copia/style.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
     <title>To do List</title>
   </head>
   <body>
-    <h2>To Do List</h2>
-    <input type="text" />
-    <button>Addelement</button>
-    <ul></ul>
-    <script src="./assets copia/scripts.js"></script>
+    <main>
+      <h2>To Do List</h2>
+      <form>
+        <input type="text" id="content" placeholder="Inserisci cose da fare" required />
+        <button type="submit">Addelement</button>
+        <ul id="list"></ul>
+      </form>
+    </main>
+    <script src="./assets/scripts.js"></script>
   </body>
 </html>
